[package]
name = "hotToday"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "acfun"
path = "bin/acfun.rs"

[[bin]]
name = "anquanke"
path = "bin/anquanke.rs"

[[bin]]
name = "baidu"
path = "bin/baidu.rs"

[[bin]]
name = "baijing"
path = "bin/baijing.rs"

[[bin]]
name = "crypto"
path = "bin/crypto.rs"

[[bin]]
name = "csdn"
path = "bin/csdn.rs"

[[bin]]
name = "dsb"
path = "bin/dsb.rs"

[[bin]]
name = "diyicaijing"
path = "bin/diyicaijing.rs"

[[bin]]
name = "douban"
path = "bin/douban.rs"

[[bin]]
name = "pojie"
path = "bin/pojie.rs"


[dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.3"
